--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ geolibs-cartoasync = "^0.0.4"
 pandas = "^0.24.1"
 sqlalchemy = ">=1.1.15, <2.0.0"
 pyjwt = "^1.7"
-aioauth-client = "^0.16.2"
+aioauth-client = "<=0.16.2"
 environs = "^5.0"
 psycopg2-binary = "^2.8"
 redis = "^3.2"
